# suitcase

./: .gitignore  README.md  config.json  pyproject.toml  requirements.txt  setup.py  suitcase.py
src/suitcase/: __init__.py  config.py  scripts.py  session.py
src/suitcase/config/: config.json
suitcase/: __init__.py  __main__.py  cfg.py  config.py  scripts.py  session.py
suitcase/scripts/: injection.js
