[build-system]
requires=["setuptools>=80.9.0"]
build-backend="setuptools.build_meta"

[project]
name="suitcase"
version="1.0.0"
dependencies=[
        "aiofiles>=24.1.0",
        "aiohttp>=3.12.15",
        "platformdirs>=4.4.0"
]

[tool.setuptools.packages.find]
where=["src"]
include=["suitcase*"]

[tool.setuptools.package-data]
"suitcase"=["config/*", "scripts/*"]